--- a/css/produtos.css
+++ b/css/produtos.css
@@ -454,13 +454,14 @@
     position: absolute;
     width: 60px;
     height: 50px;
-    background-color: #f3f5f7;
+    background-color: black;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -10;
     border-radius: 50%;
     z-index: -100;
+    opacity: 30%    ;
 
 
 }
