--- a/css/produtos.css
+++ b/css/produtos.css
@@ -245,28 +245,54 @@
     width: fit-content;
     position: relative;
 }
-.bloco-flutuante-venda__bloco-imagem i {
-    position:absolute;
-    bottom: 2px;
-    right: 0px;
-    border-radius: 50%;
-    padding: 5px;
-    border: 1px solid black;
 
-}
 
 .bloco-flutuante-venda__bloco-imagem-subbloco {
     width: 200px;
     position: absolute;
-    top: -9px;
+    top: 122px;
     left: 0;
     box-shadow:rgba(34, 38, 42, 0.05) 0.125rem 0.25rem 0.5rem, rgba(34, 38, 42, 0.1) 0.25rem 0.5rem 1.5rem;
     border-radius: 10px;
     background-color: #fff;
-    padding:6px 16px;
+    padding:6px 0;
     box-sizing: border-box;
+    display: none;
+ 
+
+    
 }
 
+.bloco-flutuante-venda__bloco-imagem-icone {
+    position:absolute;
+    bottom: 0px;
+    right: 0;
+    border-radius: 50%;
+    padding: 5px;
+    border: 1px solid black;
+    display: none;
+     
+
+}
+
+.bloco-flutuante-venda__bloco-imagem-subbloco-texto {
+    font-size: 14px;
+}
+.bloco-flutuante-venda__bloco-imagem-subbloco-item-lista {
+  cursor: pointer;
+}
+.bloco-flutuante-venda__bloco-imagem-subbloco-item-lista-bloco {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    padding: 10px 16px;
+}
+.bloco-flutuante-venda__bloco-imagem-subbloco-icone {
+    display: block;
+    position: static;
+    width:15px;
+    height: 15px;
+}
 .container-bloco-flutuante__titulo-imagem {
     font-size: 12px;
     color: #acb4bb;
